<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="construct">Section in construction</string>
    <string name="app_name">MineSweeper LP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="name">Type your name:</string>
    <string name="accept">Continue</string>
 	    
    <string name="start">Start</string>
    <string name="nuGame">New Game</string>
    <string name="ranking">Ranking</string>
    <string name="about">About</string>
    <string name="aboutDesc">Desarrollo del juego Mine Sweeper para la plataforma Android como proyecto del primer parcial de la materia: Lenguajes de Programación\n\nDesarrollador: Efrén Romero</string>
	<string name="game">Playing</string>
	<string name="levelsPrompt">Choose a level:</string>
	<string name="easy">Easy</string>
	<string name="medium">Medium</string>
	<string name="hard">Hard</string>
	<string name="custom">Custom</string>
	<string name="tapsToWin">Taps to win: </string>
	<string name="isMined">Is mined, you lost :\</string>
	
	<string name="reset">Reset</string>
	<string name="time">Time: </string>
	
	<string name="rows">Rows: </string>
	<string name="columns">Columns: </string>
	<string name="mines">Percentage of mines: </string>
</resources>
