<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
   <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgame">
    </ImageView>
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:gravity="center"
		>
	    
	    <!-- Etiqueta de texto -->
		
		<!-- Cuadro de texto -->
		<!--  el atributo "android:inputType" indica que contenido va a albergar el control.-->
		
		<TextView
			android:id="@+id/chooseALevelLbl"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/levelsPrompt" 
			android:textColor="@color/gray"
			android:textSize="35sp"/>
		<Spinner
		    android:id="@+id/ListOfLevels"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		   	android:prompt="@string/levelsPrompt"
		    android:spinnerMode="dropdown"
		    />
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center"
			>
			<TextView
				android:id="@+id/Rows"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/rows" 
				android:textColor="@color/gray"
				android:textSize="35sp"/>
			<EditText 
			    android:id="@+id/numOfRows"
				android:layout_width="100sp"
				android:layout_height="wrap_content"
				android:textColor="@color/gray"
				android:textSize="35sp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center"
			>
			<TextView
				android:id="@+id/Columns"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/columns" 
				android:textColor="@color/gray"
				android:textSize="35sp"/>
			<EditText 
			    android:id="@+id/numOfColumns"
				android:layout_width="100sp"
				android:layout_height="wrap_content"
				android:textColor="@color/gray"
				android:textSize="35sp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center"
			>
			<TextView
				android:id="@+id/Mines"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/mines" 
				android:textColor="@color/gray"
				android:textSize="35sp"/>
			<EditText 
			    android:id="@+id/percentOfMines"
				android:layout_width="100sp"
				android:layout_height="wrap_content"
				android:textColor="@color/gray"
				android:textSize="35sp"/>
		</LinearLayout>
		<Button
			android:id="@+id/continueBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/accept" 
			android:textColor="@color/gray"
			android:textSize="35sp"/>
		
   </LinearLayout>
</FrameLayout>